--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -34,8 +34,9 @@ Description: peer-to-peer network based digital currency - daemon
  Bitcoin is an experimental new digital currency that enables instant
  payments to anyone, anywhere in the world. Bitcoin uses peer-to-peer
  technology to operate with no central authority: managing transactions
- and issuing money are carried out collectively by the network. Bitcoin ABC
- is the name of the open source software which enables the use of this currency.
+ and issuing money are carried out collectively by the network. Bitcoin
+ Clashic ABCD is the name of the open source software which enables the 
+ use of this currency.
  .
  This package provides the daemon, bitcoind, and the CLI tool
  bitcoin-cli to interact with the daemon.
@@ -47,8 +48,9 @@ Description: peer-to-peer network based digital currency - Qt GUI
  Bitcoin is an experimental new digital currency that enables instant
  payments to anyone, anywhere in the world. Bitcoin uses peer-to-peer
  technology to operate with no central authority: managing transactions
- and issuing money are carried out collectively by the network. Bitcoin ABC
- is the name of the open source software which enables the use of this currency.
+ and issuing money are carried out collectively by the network. Bitcoin
+ Clashic ABCD is the name of the open source software which enables the
+ use of this currency.
  .
  This package provides Bitcoin-Qt, a GUI for Bitcoin based on Qt.
 
@@ -59,8 +61,9 @@ Description: peer-to-peer digital currency - standalone transaction tool
  Bitcoin is an experimental new digital currency that enables instant
  payments to anyone, anywhere in the world. Bitcoin uses peer-to-peer
  technology to operate with no central authority: managing transactions
- and issuing money are carried out collectively by the network. Bitcoin ABC
- is the name of the open source software which enables the use of this currency.
+ and issuing money are carried out collectively by the network. Bitcoin
+ Clashic ABCD is the name of the open source software which enables the
+ use of this currency.
  .
  This package provides bitcoin-tx, a command-line transaction creation
  tool which can be used without a bitcoin daemon.  Some means of
