--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -1,9 +1,9 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
 
-#DEB_MAKE_CHECK_TARGET = test_bitcoin
+#DEB_MAKE_CHECK_TARGET = test_clashic
 #build/bitcoind::
-#	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,src/test_bitcoin)
+#	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,src/test_clashic)
 
 %:
 	dh --with bash-completion $@
