--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 *.exe
 src/bitcoin
 src/bitcoind
-src/bitcoin-cli
+src/clashic-cli
 src/clashic-seeder
 src/bitcoin-tx
 src/test/test_clashic
@@ -75,12 +75,12 @@ src/qt/test/moc*.cpp
 # Compilation and Qt preprocessor part
 *.qm
 Makefile
-bitcoin-qt
+clashic-qt
 Bitcoin-Qt.app
 
 # Unit-tests
 Makefile.test
-bitcoin-qt_test
+clashic-qt_test
 src/test/buildenv.py
 
 # Resources cpp
