--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ AC_CONFIG_MACRO_DIR([build-aux/m4])
 BITCOIN_DAEMON_NAME=clashicd
 CLASHIC_GUI_NAME=clashic-qt
 CLASHIC_CLI_NAME=clashic-cli
-BITCOIN_TX_NAME=clashic-tx
+CLASHIC_TX_NAME=clashic-tx
 CLASHIC_SEEDER_NAME=clashic-seeder
 
 AC_CANONICAL_HOST
@@ -304,9 +304,9 @@ CPPFLAGS="$CPPFLAGS -DHAVE_BUILD_INFO -D__STDC_FORMAT_MACROS"
 
 AC_ARG_WITH([utils],
   [AS_HELP_STRING([--with-utils],
-  [build clashic-cli bitcoin-tx (default=yes)])],
-  [build_bitcoin_utils=$withval],
-  [build_bitcoin_utils=yes])
+  [build clashic-cli clashic-tx (default=yes)])],
+  [build_clashic_utils=$withval],
+  [build_clashic_utils=yes])
 
 AC_ARG_WITH([libs],
   [AS_HELP_STRING([--with-libs],
@@ -713,7 +713,7 @@ CLASHIC_QT_INIT
 dnl sets $clashic_enable_qt, $clashic_enable_qt_test, $clashic_enable_qt_dbus
 CLASHIC_QT_CONFIGURE([$use_pkgconfig], [qt5])
 
-if test x$build_bitcoin_utils$build_bitcoind$clashic_enable_qt$build_clashic_seeder$use_tests$use_bench = xnononononono; then
+if test x$build_clashic_utils$build_bitcoind$clashic_enable_qt$build_clashic_seeder$use_tests$use_bench = xnononononono; then
     use_boost=no
 else
     use_boost=yes
@@ -895,7 +895,7 @@ if test x$use_pkgconfig = xyes; then
       if test x$use_qr != xno; then
         CLASHIC_QT_CHECK([PKG_CHECK_MODULES([QR], [libqrencode], [have_qrencode=yes], [have_qrencode=no])])
       fi
-      if test x$build_bitcoin_utils$build_bitcoind$clashic_enable_qt$use_tests != xnononono; then
+      if test x$build_clashic_utils$build_bitcoind$clashic_enable_qt$use_tests != xnononono; then
         PKG_CHECK_MODULES([EVENT], [libevent],, [AC_MSG_ERROR(libevent not found.)])
         if test x$TARGET_OS != xwindows; then
           PKG_CHECK_MODULES([EVENT_PTHREADS], [libevent_pthreads],, [AC_MSG_ERROR(libevent_pthreads not found.)])
@@ -920,7 +920,7 @@ else
   AC_CHECK_HEADER([openssl/ssl.h],, AC_MSG_ERROR(libssl headers missing),)
   AC_CHECK_LIB([ssl],         [main],SSL_LIBS=-lssl, AC_MSG_ERROR(libssl missing))
 
-  if test x$build_bitcoin_utils$build_bitcoind$clashic_enable_qt$use_tests != xnononono; then
+  if test x$build_clashic_utils$build_bitcoind$clashic_enable_qt$use_tests != xnononono; then
     AC_CHECK_HEADER([event2/event.h],, AC_MSG_ERROR(libevent headers missing),)
     AC_CHECK_LIB([event],[main],EVENT_LIBS=-levent,AC_MSG_ERROR(libevent missing))
     if test x$TARGET_OS != xwindows; then
@@ -969,7 +969,7 @@ dnl univalue check
 
 need_bundled_univalue=yes
 
-if test x$build_bitcoin_utils$build_bitcoind$clashic_enable_qt$use_tests$use_bench = xnonononono; then
+if test x$build_clashic_utils$build_bitcoind$clashic_enable_qt$use_tests$use_bench = xnonononono; then
   need_bundled_univalue=no
 else
 
@@ -1023,9 +1023,9 @@ AC_MSG_CHECKING([whether to build clashic-seeder])
 AM_CONDITIONAL([BUILD_CLASHIC_SEEDER], [test x$build_clashic_seeder = xyes])
 AC_MSG_RESULT($build_clashic_seeder)
 
-AC_MSG_CHECKING([whether to build utils (clashic-cli bitcoin-tx)])
-AM_CONDITIONAL([BUILD_BITCOIN_UTILS], [test x$build_bitcoin_utils = xyes])
-AC_MSG_RESULT($build_bitcoin_utils)
+AC_MSG_CHECKING([whether to build utils (clashic-cli clashic-tx)])
+AM_CONDITIONAL([BUILD_CLASHIC_UTILS], [test x$build_clashic_utils = xyes])
+AC_MSG_RESULT($build_clashic_utils)
 
 AC_MSG_CHECKING([whether to build libraries])
 AM_CONDITIONAL([BUILD_BITCOIN_LIBS], [test x$build_bitcoin_libs = xyes])
@@ -1151,7 +1151,7 @@ else
   AC_MSG_RESULT([no])
 fi
 
-if test x$build_bitcoin_utils$build_bitcoin_libs$build_bitcoind$clashic_enable_qt$use_bench$use_tests = xnononononono; then
+if test x$build_clashic_utils$build_bitcoin_libs$build_bitcoind$clashic_enable_qt$use_bench$use_tests = xnononononono; then
   AC_MSG_ERROR([No targets! Please specify at least one of: --with-utils --with-libs --with-daemon --with-seeder --with-gui --enable-bench or --enable-tests])
 fi
 
@@ -1191,7 +1191,7 @@ AC_SUBST(COPYRIGHT_HOLDERS_FINAL, "_COPYRIGHT_HOLDERS_FINAL")
 AC_SUBST(BITCOIN_DAEMON_NAME)
 AC_SUBST(CLASHIC_GUI_NAME)
 AC_SUBST(CLASHIC_CLI_NAME)
-AC_SUBST(BITCOIN_TX_NAME)
+AC_SUBST(CLASHIC_TX_NAME)
 AC_SUBST(CLASHIC_SEEDER_NAME)
 
 AC_SUBST(RELDFLAGS)
