--- a/src/clashic-tx-res.rc
+++ b/src/clashic-tx-res.rc
@@ -16,14 +16,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "Bitcoin"
-            VALUE "FileDescription",    "bitcoin-tx (CLI Bitcoin transaction editor utility)"
+            VALUE "CompanyName",        "Bitcoin Clashic"
+            VALUE "FileDescription",    "clashic-tx (CLI Clashic transaction editor utility)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "bitcoin-tx"
+            VALUE "InternalName",       "clashic-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "bitcoin-tx.exe"
-            VALUE "ProductName",        "bitcoin-tx"
+            VALUE "OriginalFilename",   "clashic-tx.exe"
+            VALUE "ProductName",        "clashic-tx"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
