--- a/contrib/init/clashicd.conf
+++ b/contrib/init/clashicd.conf
@@ -3,14 +3,14 @@ description "Bitcoin Clashic ABCD Daemon"
 start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
-env BITCOIND_BIN="/usr/bin/bitcoind"
-env BITCOIND_USER="bitcoin"
-env BITCOIND_GROUP="bitcoin"
-env BITCOIND_PIDDIR="/var/run/bitcoind"
+env CLASHICD_BIN="/usr/bin/clashicd"
+env CLASHICD_USER="bitcoin"
+env CLASHICD_GROUP="bitcoin"
+env CLASHICD_PIDDIR="/var/run/clashicd"
 # upstart can't handle variables constructed with other variables
-env BITCOIND_PIDFILE="/var/run/bitcoind/bitcoind.pid"
-env BITCOIND_CONFIGFILE="/etc/bitcoin/bitcoin.conf"
-env BITCOIND_DATADIR="/var/lib/bitcoind"
+env CLASHICD_PIDFILE="/var/run/clashicd/clashicd.pid"
+env CLASHICD_CONFIGFILE="/etc/clashic/clashic.conf"
+env CLASHICD_DATADIR="/var/lib/clashicd"
 
 expect fork
 
@@ -20,13 +20,13 @@ kill timeout 60
 
 pre-start script
     # this will catch non-existent config files
-    # bitcoind will check and exit with this very warning, but it can do so
+    # clashicd will check and exit with this very warning, but it can do so
     # long after forking, leaving upstart to think everything started fine.
     # since this is a commonly encountered case on install, just check and
     # warn here.
-    if ! grep -qs '^rpcpassword=' "$BITCOIND_CONFIGFILE" ; then
-        echo "ERROR: You must set a secure rpcpassword to run bitcoind."
-        echo "The setting must appear in $BITCOIND_CONFIGFILE"
+    if ! grep -qs '^rpcpassword=' "$CLASHICD_CONFIGFILE" ; then
+        echo "ERROR: You must set a secure rpcpassword to run clashicd."
+        echo "The setting must appear in $CLASHICD_CONFIGFILE"
         echo
         echo "This password is security critical to securing wallets "
         echo "and must not be the same as the rpcuser setting."
@@ -38,28 +38,28 @@ pre-start script
         echo "It is also recommended that you also set alertnotify so you are "
         echo "notified of problems:"
         echo
-        echo "ie: alertnotify=echo %%s | mail -s \"Bitcoin Alert\"" \
+        echo "ie: alertnotify=echo %%s | mail -s \"Bitcoin Clashic Alert\"" \
             "admin@foo.com"
         echo
         exit 1
     fi
 
-    mkdir -p "$BITCOIND_PIDDIR"
-    chmod 0755 "$BITCOIND_PIDDIR"
-    chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_PIDDIR"
-    chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_CONFIGFILE"
-    chmod 0660 "$BITCOIND_CONFIGFILE"
+    mkdir -p "$CLASHICD_PIDDIR"
+    chmod 0755 "$CLASHICD_PIDDIR"
+    chown $CLASHICD_USER:$CLASHICD_GROUP "$CLASHICD_PIDDIR"
+    chown $CLASHICD_USER:$CLASHICD_GROUP "$CLASHICD_CONFIGFILE"
+    chmod 0660 "$CLASHICD_CONFIGFILE"
 end script
 
 exec start-stop-daemon \
     --start \
-    --pidfile "$BITCOIND_PIDFILE" \
-    --chuid $BITCOIND_USER:$BITCOIND_GROUP \
-    --exec "$BITCOIND_BIN" \
+    --pidfile "$CLASHICD_PIDFILE" \
+    --chuid $CLASHICD_USER:$CLASHICD_GROUP \
+    --exec "$CLASHICD_BIN" \
     -- \
-    -pid="$BITCOIND_PIDFILE" \
-    -conf="$BITCOIND_CONFIGFILE" \
-    -datadir="$BITCOIND_DATADIR" \
+    -pid="$CLASHICD_PIDFILE" \
+    -conf="$CLASHICD_CONFIGFILE" \
+    -datadir="$CLASHICD_DATADIR" \
     -disablewallet \
     -daemon
 
