--- a/share/qt/Info.plist.in
+++ b/share/qt/Info.plist.in
@@ -29,16 +29,16 @@
   <string>????</string>
 
   <key>CFBundleExecutable</key>
-  <string>BitcoinABC-Qt</string>
+  <string>Clashic-Qt</string>
   
   <key>CFBundleName</key>
-  <string>BitcoinABC-Qt</string>
+  <string>Clashic-Qt</string>
 
   <key>LSHasLocalizedDisplayName</key>
   <true/>
 
   <key>CFBundleIdentifier</key>
-  <string>org.bitcoinabc.BitcoinABC-Qt</string>
+  <string>org.clashic.Clashic-Qt</string>
 
   <key>CFBundleURLTypes</key>
   <array>
@@ -46,10 +46,10 @@
       <key>CFBundleTypeRole</key>
       <string>Editor</string>
       <key>CFBundleURLName</key>
-      <string>org.bitcoinclashic.BitcoinPayment</string>
+      <string>org.clashic.BitcoinPayment</string>
       <key>CFBundleURLSchemes</key>
       <array>
-        <string>bitcoinclashic</string>
+        <string>clashic</string>
       </array>
     </dict>
   </array>
@@ -58,7 +58,7 @@
   <array>
     <dict>
       <key>UTTypeIdentifier</key>
-      <string>org.bitcoinclashic.paymentrequest</string>
+      <string>org.clashic.paymentrequest</string>
       <key>UTTypeDescription</key>
       <string>Bitcoin Cash payment request</string>
       <key>UTTypeConformsTo</key>
@@ -68,10 +68,10 @@
       <key>UTTypeTagSpecification</key>
       <dict>
         <key>public.mime-type</key>
-        <string>application/bitcoinclashic-paymentrequest</string>
+        <string>application/clashic-paymentrequest</string>
         <key>public.filename-extension</key>
         <array>
-          <string>bitcoinclashicpaymentrequest</string>
+          <string>clashicpaymentrequest</string>
         </array>
       </dict>
     </dict>
@@ -84,7 +84,7 @@
       <string>Editor</string>
       <key>LSItemContentTypes</key>
       <array>
-        <string>org.bitcoinclashic.paymentrequest</string>
+        <string>org.clashic.paymentrequest</string>
       </array>
       <key>LSHandlerRank</key>
       <string>Owner</string>
