fixed build error on clashicd and renamed shared libraries and header file

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,9 +14,9 @@ export PYTHONPATH
 
 GZIP_ENV="-9n"
 
-if BUILD_BITCOIN_LIBS
+if BUILD_CLASHIC_LIBS
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libbitcoinconsensus.pc
+pkgconfig_DATA = libclashicconsensus.pc
 endif
 
 CLASHICD_BIN=$(top_builddir)/src/$(BITCOIN_DAEMON_NAME)$(EXEEXT)
