--- a/configure.ac
+++ b/configure.ac
@@ -311,8 +311,8 @@ AC_ARG_WITH([utils],
 AC_ARG_WITH([libs],
   [AS_HELP_STRING([--with-libs],
   [build libraries (default=yes)])],
-  [build_bitcoin_libs=$withval],
-  [build_bitcoin_libs=yes])
+  [build_clashic_libs=$withval],
+  [build_clashic_libs=yes])
 
 AC_ARG_WITH([daemon],
   [AS_HELP_STRING([--with-daemon],
@@ -1028,12 +1028,12 @@ AM_CONDITIONAL([BUILD_CLASHIC_UTILS], [test x$build_clashic_utils = xyes])
 AC_MSG_RESULT($build_clashic_utils)
 
 AC_MSG_CHECKING([whether to build libraries])
-AM_CONDITIONAL([BUILD_BITCOIN_LIBS], [test x$build_bitcoin_libs = xyes])
-if test x$build_bitcoin_libs = xyes; then
+AM_CONDITIONAL([BUILD_CLASHIC_LIBS], [test x$build_clashic_libs = xyes])
+if test x$build_clashic_libs = xyes; then
   AC_DEFINE(HAVE_CONSENSUS_LIB, 1, [Define this symbol if the consensus lib has been built])
-  AC_CONFIG_FILES([libbitcoinconsensus.pc:libbitcoinconsensus.pc.in])
+  AC_CONFIG_FILES([libclashicconsensus.pc:libclashicconsensus.pc.in])
 fi
-AC_MSG_RESULT($build_bitcoin_libs)
+AC_MSG_RESULT($build_clashic_libs)
 
 AC_LANG_POP
 
@@ -1151,7 +1151,7 @@ else
   AC_MSG_RESULT([no])
 fi
 
-if test x$build_clashic_utils$build_bitcoin_libs$build_clashicd$clashic_enable_qt$use_bench$use_tests = xnononononono; then
+if test x$build_clashic_utils$build_clashic_libs$build_clashicd$clashic_enable_qt$use_bench$use_tests = xnononononono; then
   AC_MSG_ERROR([No targets! Please specify at least one of: --with-utils --with-libs --with-daemon --with-seeder --with-gui --enable-bench or --enable-tests])
 fi
 
