backport First pass at HashType class

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -301,6 +301,7 @@ libbitcoin_consensus_a_SOURCES = \
   pubkey.cpp \
   pubkey.h \
   script/clashicconsensus.cpp \
+  script/sighashtype.h \
   script/interpreter.cpp \
   script/interpreter.h \
   script/script.cpp \
