--- a/contrib/init/cored.conf
+++ b/contrib/init/cored.conf
@@ -3,14 +3,14 @@ description "Bitcoin Core ABCD Daemon"
 start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
-env CLASHICD_BIN="/usr/bin/cored"
-env CLASHICD_USER="bitcoin"
-env CLASHICD_GROUP="bitcoin"
-env CLASHICD_PIDDIR="/var/run/cored"
+env CORED_BIN="/usr/bin/cored"
+env CORED_USER="bitcoin"
+env CORED_GROUP="bitcoin"
+env CORED_PIDDIR="/var/run/cored"
 # upstart can't handle variables constructed with other variables
-env CLASHICD_PIDFILE="/var/run/cored/cored.pid"
-env CLASHICD_CONFIGFILE="/etc/core/core.conf"
-env CLASHICD_DATADIR="/var/lib/cored"
+env CORED_PIDFILE="/var/run/cored/cored.pid"
+env CORED_CONFIGFILE="/etc/core/core.conf"
+env CORED_DATADIR="/var/lib/cored"
 
 expect fork
 
@@ -24,9 +24,9 @@ pre-start script
     # long after forking, leaving upstart to think everything started fine.
     # since this is a commonly encountered case on install, just check and
     # warn here.
-    if ! grep -qs '^rpcpassword=' "$CLASHICD_CONFIGFILE" ; then
+    if ! grep -qs '^rpcpassword=' "$CORED_CONFIGFILE" ; then
         echo "ERROR: You must set a secure rpcpassword to run cored."
-        echo "The setting must appear in $CLASHICD_CONFIGFILE"
+        echo "The setting must appear in $CORED_CONFIGFILE"
         echo
         echo "This password is security critical to securing wallets "
         echo "and must not be the same as the rpcuser setting."
@@ -44,22 +44,22 @@ pre-start script
         exit 1
     fi
 
-    mkdir -p "$CLASHICD_PIDDIR"
-    chmod 0755 "$CLASHICD_PIDDIR"
-    chown $CLASHICD_USER:$CLASHICD_GROUP "$CLASHICD_PIDDIR"
-    chown $CLASHICD_USER:$CLASHICD_GROUP "$CLASHICD_CONFIGFILE"
-    chmod 0660 "$CLASHICD_CONFIGFILE"
+    mkdir -p "$CORED_PIDDIR"
+    chmod 0755 "$CORED_PIDDIR"
+    chown $CORED_USER:$CORED_GROUP "$CORED_PIDDIR"
+    chown $CORED_USER:$CORED_GROUP "$CORED_CONFIGFILE"
+    chmod 0660 "$CORED_CONFIGFILE"
 end script
 
 exec start-stop-daemon \
     --start \
-    --pidfile "$CLASHICD_PIDFILE" \
-    --chuid $CLASHICD_USER:$CLASHICD_GROUP \
-    --exec "$CLASHICD_BIN" \
+    --pidfile "$CORED_PIDFILE" \
+    --chuid $CORED_USER:$CORED_GROUP \
+    --exec "$CORED_BIN" \
     -- \
-    -pid="$CLASHICD_PIDFILE" \
-    -conf="$CLASHICD_CONFIGFILE" \
-    -datadir="$CLASHICD_DATADIR" \
+    -pid="$CORED_PIDFILE" \
+    -conf="$CORED_CONFIGFILE" \
+    -datadir="$CORED_DATADIR" \
     -disablewallet \
     -daemon
 
