--- a/doc/man/Makefile.am
+++ b/doc/man/Makefile.am
@@ -1,6 +1,6 @@
 dist_man1_MANS=
 
-if BUILD_CLASHICD
+if BUILD_CORED
   dist_man1_MANS+=cored.1
 endif
 
@@ -8,6 +8,6 @@ if ENABLE_QT
   dist_man1_MANS+=core-qt.1
 endif
 
-if BUILD_CLASHIC_UTILS
+if BUILD_CORE_UTILS
   dist_man1_MANS+=core-cli.1 core-tx.1
 endif
