--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -23,7 +23,7 @@ Build-Depends: debhelper,
  libprotobuf-dev, protobuf-compiler,
  python
 Standards-Version: 3.9.2
-Homepage: https://thebitcoincore.org/
+Homepage: https://thethebitcoincore.org/
 Vcs-Git: git://github.com/bitcoin-cored/bitcoin-cored.git
 Vcs-Browser: https://github.com/bitcoin-cored/bitcoin-cored
 
