--- a/qa/pull-tester/tests_config.py.in
+++ b/qa/pull-tester/tests_config.py.in
@@ -9,6 +9,6 @@ EXEEXT="@EXEEXT@"
 
 # These will turn into comments if they were disabled when configuring.
 @ENABLE_WALLET_TRUE@ENABLE_WALLET=1
-@BUILD_CLASHIC_UTILS_TRUE@ENABLE_UTILS=1
-@BUILD_CLASHICD_TRUE@ENABLE_CLASHICD=1
+@BUILD_CORE_UTILS_TRUE@ENABLE_UTILS=1
+@BUILD_CORED_TRUE@ENABLE_CORED=1
 @ENABLE_ZMQ_TRUE@ENABLE_ZMQ=1
