--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -180,7 +180,7 @@ PROTOBUF_CC = qt/paymentrequest.pb.cc
 PROTOBUF_H = qt/paymentrequest.pb.h
 PROTOBUF_PROTO = qt/paymentrequest.proto
 
-CLASHIC_QT_H = \
+CORE_QT_H = \
   qt/addressbookpage.h \
   qt/addresstablemodel.h \
   qt/askpassphrasedialog.h \
@@ -291,7 +291,7 @@ RES_ICONS = \
   qt/res/icons/warning.png \
   qt/res/icons/verify.png
 
-CLASHIC_QT_BASE_CPP = \
+CORE_QT_BASE_CPP = \
   qt/bantablemodel.cpp \
   qt/bitcoinaddressvalidator.cpp \
   qt/bitcoinamountfield.cpp \
@@ -315,9 +315,9 @@ CLASHIC_QT_BASE_CPP = \
   qt/trafficgraphwidget.cpp \
   qt/utilitydialog.cpp
 
-CLASHIC_QT_WINDOWS_CPP = qt/winshutdownmonitor.cpp
+CORE_QT_WINDOWS_CPP = qt/winshutdownmonitor.cpp
 
-CLASHIC_QT_WALLET_CPP = \
+CORE_QT_WALLET_CPP = \
   qt/addressbookpage.cpp \
   qt/addresstablemodel.cpp \
   qt/askpassphrasedialog.cpp \
@@ -345,28 +345,28 @@ CLASHIC_QT_WALLET_CPP = \
   qt/walletmodeltransaction.cpp \
   qt/walletview.cpp
 
-CLASHIC_QT_CPP = $(CLASHIC_QT_BASE_CPP)
+CORE_QT_CPP = $(CORE_QT_BASE_CPP)
 if TARGET_WINDOWS
-CLASHIC_QT_CPP += $(CLASHIC_QT_WINDOWS_CPP)
+CORE_QT_CPP += $(CORE_QT_WINDOWS_CPP)
 endif
 if ENABLE_WALLET
-CLASHIC_QT_CPP += $(CLASHIC_QT_WALLET_CPP)
+CORE_QT_CPP += $(CORE_QT_WALLET_CPP)
 endif
 
 RES_IMAGES = 
 
 RES_MOVIES = $(wildcard $(srcdir)/qt/res/movies/spinner-*.png)
 
-CLASHIC_RC = qt/res/core-qt-res.rc
+CORE_RC = qt/res/core-qt-res.rc
 
-CLASHIC_QT_INCLUDES = -I$(builddir)/qt -I$(srcdir)/qt -I$(srcdir)/qt/forms \
+CORE_QT_INCLUDES = -I$(builddir)/qt -I$(srcdir)/qt -I$(srcdir)/qt/forms \
   -I$(builddir)/qt/forms -DQT_NO_KEYWORDS
 
-qt_libbitcoinqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(CLASHIC_QT_INCLUDES) \
+qt_libbitcoinqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(CORE_QT_INCLUDES) \
   $(QT_INCLUDES) $(QT_DBUS_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
 qt_libbitcoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
-qt_libbitcoinqt_a_SOURCES = $(CLASHIC_QT_CPP) $(CLASHIC_QT_H) $(QT_FORMS_UI) \
+qt_libbitcoinqt_a_SOURCES = $(CORE_QT_CPP) $(CORE_QT_H) $(QT_FORMS_UI) \
   $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(PROTOBUF_PROTO) $(RES_ICONS) $(RES_IMAGES) $(RES_MOVIES)
 
 nodist_qt_libbitcoinqt_a_SOURCES = $(QT_MOC_CPP) $(QT_MOC) $(PROTOBUF_CC) \
@@ -386,7 +386,7 @@ $(QT_MOC): $(PROTOBUF_H)
 $(QT_MOC_CPP): $(PROTOBUF_H)
 
 # core-qt binary #
-qt_core_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(CLASHIC_QT_INCLUDES) \
+qt_core_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(CORE_QT_INCLUDES) \
   $(QT_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
 qt_core_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
@@ -395,7 +395,7 @@ if TARGET_DARWIN
   qt_core_qt_SOURCES += $(BITCOIN_MM)
 endif
 if TARGET_WINDOWS
-  qt_core_qt_SOURCES += $(CLASHIC_RC)
+  qt_core_qt_SOURCES += $(CORE_RC)
 endif
 qt_core_qt_LDADD = qt/libbitcoinqt.a $(LIBBITCOIN_SERVER)
 if ENABLE_WALLET
@@ -419,7 +419,7 @@ $(srcdir)/qt/bitcoinstrings.cpp: $(libbitcoin_server_a_SOURCES) $(libbitcoin_wal
 	@test -n $(XGETTEXT) || echo "xgettext is required for updating translations"
 	$(AM_V_GEN) cd $(srcdir); XGETTEXT=$(XGETTEXT) PACKAGE_NAME="$(PACKAGE_NAME)" COPYRIGHT_HOLDERS="$(COPYRIGHT_HOLDERS)" COPYRIGHT_HOLDERS_SUBSTITUTION="$(COPYRIGHT_HOLDERS_SUBSTITUTION)" $(PYTHON) ../share/qt/extract_strings_qt.py $^
 
-translate: $(srcdir)/qt/bitcoinstrings.cpp $(QT_FORMS_UI) $(QT_FORMS_UI) $(core_qt_BASE_CPP) qt/bitcoin.cpp $(core_qt_WINDOWS_CPP) $(core_qt_WALLET_CPP) $(CLASHIC_QT_H) $(BITCOIN_MM)
+translate: $(srcdir)/qt/bitcoinstrings.cpp $(QT_FORMS_UI) $(QT_FORMS_UI) $(core_qt_BASE_CPP) qt/bitcoin.cpp $(core_qt_WINDOWS_CPP) $(core_qt_WALLET_CPP) $(CORE_QT_H) $(BITCOIN_MM)
 	@test -n $(LUPDATE) || echo "lupdate is required for updating translations"
 	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(LUPDATE) $^ -locations relative -no-obsolete -ts $(srcdir)/qt/locale/bitcoin_en.ts
 
