--- a/src/Makefile.qttest.include
+++ b/src/Makefile.qttest.include
@@ -21,7 +21,7 @@ TEST_QT_H = \
   qt/test/paymentrequestdata.h \
   qt/test/paymentservertests.h
 
-qt_test_test_core_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(CLASHIC_QT_INCLUDES) \
+qt_test_test_core_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(CORE_QT_INCLUDES) \
   $(QT_INCLUDES) $(QT_TEST_INCLUDES) $(PROTOBUF_CFLAGS)
 
 qt_test_test_core_qt_SOURCES = \
@@ -51,9 +51,9 @@ qt_test_test_core_qt_LDADD += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBBITCOI
 qt_test_test_core_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 qt_test_test_core_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
-CLEAN_CLASHIC_QT_TEST = $(TEST_QT_MOC_CPP) qt/test/*.gcda qt/test/*.gcno
+CLEAN_CORE_QT_TEST = $(TEST_QT_MOC_CPP) qt/test/*.gcda qt/test/*.gcno
 
-CLEANFILES += $(CLEAN_CLASHIC_QT_TEST)
+CLEANFILES += $(CLEAN_CORE_QT_TEST)
 
 test_core_qt : qt/test/test_core-qt$(EXEEXT)
 
@@ -61,4 +61,4 @@ test_core_qt_check : qt/test/test_core-qt$(EXEEXT) FORCE
 	$(MAKE) check-TESTS TESTS=$^
 
 test_core_qt_clean: FORCE
-	rm -f $(CLEAN_CLASHIC_QT_TEST) $(qt_test_test_core_qt_OBJECTS)
+	rm -f $(CLEAN_CORE_QT_TEST) $(qt_test_test_core_qt_OBJECTS)
