rename libbitcoin_consensus to libclashic_consensus to output missing target for Mac build libclashicconsensus.la

--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -34,7 +34,7 @@ bench_bench_clashic_LDADD = \
   $(LIBBITCOIN_SERVER) \
   $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_UTIL) \
-  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBCLASHIC_CONSENSUS) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
